# pycounts

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: conf.py  example.ipynb
src/pycounts/: plotting.py  pycounts.py
tests/: test_pycounts.py
